--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vladimir Guillochet</title>
+    <title>Vlad Guil</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- COVER -->
     <div class="cover">
         <img class="cover_profile" src="profile_guillochet_1.jpg">
-        <h1>Vladimir Guillochet</h1>
+        <h1>Vlad Gui</h1>
         <p>Developpeur fullstack | 4 ans d'experience</p>
         <div style="text-align: center;">
             <a class="contact_button" href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">Me contacter</a>
