--- a/portfolio-application-mobile.html
+++ b/portfolio-application-mobile.html
@@ -11,7 +11,7 @@
     <div class="portfolio-header">
             <div class="texte-avec-ligne-verticale"
             style="margin-left: 16px; margin-top: 22px; height: 45px;">
-                <p class="portfolio-header-title">Vladimir Guillochet</p>
+                <p class="portfolio-header-title">Vlad Gui</p>
             </div>
             <a class="contact_button"
             style="position: absolute; right: 5px; top: 8px;" href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">Me contacter</a>
