correction bug /div section

--- a/portfolio-site-restaurant.html
+++ b/portfolio-site-restaurant.html
@@ -35,7 +35,7 @@
                 <u>Technologies utilisées :</u> <b>HTML, CSS, DJANGO, PYTHON, HEROKU</b>
             </p>
         </div>
-
+    </div>
 
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
