--- a/index.html
+++ b/index.html
@@ -56,11 +56,21 @@
         <table class="col_portfolio float-right" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-application-mobile.html"><img style="width: 100%" src="project2small.jpg"></td>
+                <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-application-mobile.html">Projet 2</a></td>
+                <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
+            </tr>
+        </table>
+        <table class="col_portfolio" border="0">
+            <tr>
+                <td><div class="barre-verticale"></div></td>
+                <td style="width: 100%;"><a href="portfolio-application-mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><a href="portfolio-application-mrbeat.html">Projet Mr Beat</a></td>
             </tr>
         </table>
     </div>
