--- a/portfolio-application_galaxy.html
+++ b/portfolio-application_galaxy.html
@@ -30,14 +30,14 @@
     <div class="section">
         <div class="texte-avec-ligne-verticale">
             <p>
-                Voici un site dédié à un restaurant, celui ci integre plusieurs fonctionnalités.<br><br>
-                Reservation de tables, ...<br><br>
-                <u>Technologies utilisées :</u> <b>HTML, CSS, DJANGO, PYTHON, HEROKU</b>
+                Voici un jeu dynamique.<br><br>
+                Il est réalisé à l'aide du moteur Kivy<br><br>
+                <u>Technologies utilisées :</u> <b>PYTHON, KIVY</b>
             </p>
         </div>
         <div style="text-align: center; margin-top: 30px">
             
-            <a href="#"><img class="portfolio" src="project2.jpg"></a>
+            <a href="#"><img class="portfolio" src="project_galaxy_bg1small.jpg"></a>
             <a href="#" style="display: block; margin-top: 8px">Consulter le projet</a>
         </div>
     </div>
