--- a/portfolio-application_galaxy.html
+++ b/portfolio-application_galaxy.html
@@ -37,8 +37,8 @@
         </div>
         <div style="text-align: center; margin-top: 30px">
             
-            <a href="#"><img class="portfolio" src="project_galaxy_bg1small.jpg"></a>
-            <a href="#" style="display: block; margin-top: 8px">Consulter le projet</a>
+            <a href="https://github.com/vladimir-gui/GalaxyProjetGot/releases"><img class="portfolio" src="project_galaxy_bg1small.jpg"></a>
+            <a href="https://github.com/vladimir-gui/GalaxyProjetGot/releases" style="display: block; margin-top: 8px">Consulter le projet</a>
         </div>
     </div>
     <!-- FRAME -->
