Mise à jour lien linkedin

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
                 <p>Projets réalisés en Windev et Python <br><br><br></p>
-                <a style="padding-left: 8px;" href="#">En savoir plus sur mon profil (profil linkein)</a>
+                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/vladimir-guillochet-020533221/">En savoir plus sur mon profil (profil linkein)</a>
             </div>
         </div>
     </div>
