Correction page mrbeat

--- a/portfolio-application_mrbeat.html
+++ b/portfolio-application_mrbeat.html
@@ -37,29 +37,20 @@
         </div>
     </div>
 
-    <!-- SECTION GRISE 2 -->
-    <div class="section section_grise2">
-        <h2>Portfolio</h2>
-        <table class="col_portfolio" style="display: inline-block;" border="0">
-            <tr align="center">
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="https://got-pizzamamadjango.herokuapp.com/"><img class="portfolio" src="project1small.jpg"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="https://got-pizzamamadjango.herokuapp.com/">Application Web</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio float-right" border="0">
-            <tr align="center">
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases"><img class="portfolio" src="project1small kivy.jpg"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases">Application Desktop, Android, IOS</a></td>
-            </tr>
-        </table>
+    <!-- section grise contenu -->
+    <div class="section">
+        <div class="texte-avec-ligne-verticale">
+            <p>
+                Voici une boite à rythme.<br><br>
+                avec la possibilité d'ajouter des kits de sons<br><br>
+                <u>Technologies utilisées :</u> <b>PYTHON, KIVY</b>
+            </p>
+        </div>
+        <div style="text-align: center; margin-top: 30px">
+            
+            <a href="https://github.com/vladimir-gui/MrBeat_GOT/releases"><img class="portfolio" src="project_mrbeat_logo.png"></a>
+            <a href="https://github.com/vladimir-gui/MrBeat_GOT/releases" style="display: block; margin-top: 8px">Consulter le projet</a>
+        </div>
     </div>
     <!-- FRAME -->
     <iframe src="contact-frame.html" scrolling="no"></iframe>
