mise a jour competences

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <div class="section section_grise1">
         <div class="separateur_gris"></div>
         <p>Je développe vos <span class="gras">Projets WEB</span> ou vos <span class="gras">Applications mobiles IOS/Android</span> de A à Z</p>
+        <p>Je suis certifié par UDEMY "Developpeur python - Formation complete 2021"</p>
+        <p>Je suis certifié par UDEMY "Deeplearning avec Tensorflow et Keras 2021"</p>
     </div>
 
     <!-- SECTION BLANCHE -->
