mise à jour compétences

--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
     <div class="section section_grise1">
         <div class="separateur_gris"></div>
         <p>Je développe vos <span class="gras">Projets WEB</span> ou vos <span class="gras">Applications mobiles IOS/Android</span> de A à Z</p>
-        <p>Je suis certifié par UDEMY "Developpeur python - Formation complete 2021"</p>
-        <p>Je suis certifié par UDEMY "Deeplearning avec Tensorflow et Keras 2021"</p>
+        <p>Windev :</p>
+        <li>Suivi du cours "autoformation Windev 22 complet"</li>
+        <li>Seminaire "nouveautés de Windev 22"</li>
+        <p>Python :</p>
+        <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
+        <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours</li>
+        <li>Certification OpenClassRoom "GIT" -- en cours</li>
     </div>
 
     <!-- SECTION BLANCHE -->
