--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@
     <div class="section section_grise1">
         <div class="separateur_gris"></div>
         <p>Je développe vos <span class="gras">Projets WEB</span> ou vos <span class="gras">Applications mobiles IOS/Android</span> de A à Z</p>
-        <p>Windev :</p>
-        <li>Suivi du cours "autoformation Windev 22 complet"</li>
-        <li>Seminaire "nouveautés de Windev 22"</li>
-        <p>Python :</p>
-        <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
-        <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours</li>
-        <li>Certification OpenClassRoom "GIT" -- en cours</li>
     </div>
 
     <!-- SECTION BLANCHE -->
@@ -44,7 +37,14 @@
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
                 <p>Projets réalisés en Windev et Python <br><br><br></p>
-                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/vladimir-guillochet-020533221/">En savoir plus sur mon profil (profil linkein)</a>
+                <p>Windev :</p>
+                    <li>Suivi du cours "autoformation Windev 22 complet"</li>
+                    <li>Seminaire "nouveautés de Windev 22"</li>
+                <p>Python :</p>
+                    <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
+                    <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
+                    <li>Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
+                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil (à venir profil linkein)</a>
             </div>
         </div>
     </div>
