modif page principale

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
                 <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
             </tr>
         </table>
+        <table class="col_portfolio float-right" border="0">
+            <tr>
+                <td><div class="barre-verticale"></div></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
+            </tr>
+        </table>
     </div>
     
     <!-- SECTION BLANCHE -->
