mise à jour page site deeplearning

--- a/portfolio-site_deeplearning.html
+++ b/portfolio-site_deeplearning.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
-    <title>Site web de restaurant</title>
+    <title>Site web de Deeplearning</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,14 +25,14 @@
         <a class="portfolio-back" href="index.html">Retour</a>
         <div class="separateur_gris" style="margin-top:-12px"></div>
         <h1 class="portfolio">PORTFOLIO</h1>
-        <h2 class="portfolio">Site web pour un restaurant</h2>
+        <h2 class="portfolio">Site web de Deeplearning</h2>
     </div>
 
     <!-- section grise contenu -->
     <div class="section">
         <div class="texte-avec-ligne-verticale">
             <p>
-                Voici un site permettant la classification de fleurs utilisant le DeepLearning<br><br>
+                Voici un site permettant la classification de fleurs d'iris utilisant le DeepLearning<br><br>
                 <u>Technologies utilisées :</u> <b>HTML, CSS, FLASK, PYTHON, HEROKU, TENSORFLOW, KERAS, réseau ANN</b>
             </p>
         </div>
