--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
             </tr>
         </table>
-        <table class="col_portfolio" border="0">
+        <table class="col_portfolio" style="display: inline-block;" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
                 <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
