--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
-    <title>Vlad Guil</title>
+    <title>Vladimir Guillochet</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- COVER -->
     <div class="cover">
         <img class="cover_profile" src="profile_guillochet_1.jpg">
-        <h1>Vlad Gui</h1>
+        <h1>Vladimir Guillochet</h1>
         <p>Developpeur fullstack | 4 ans d'experience</p>
         <div style="text-align: center;">
-            <a class="contact_button" href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">Me contacter</a>
+            <a class="contact_button" href="mailto:vladimir.guillochet@gmx.fr?subject=Contact%20Dev">Me contacter</a>
         </div>
 
         <div class="cover_contact">
-            <p><a href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">mon_email@gmx.fr</a></p>
-            <a href="tel:+33601020304">06 01 02 03 04</a>
+            <p><a href="mailto:vladimir.guillochet@gmx.fr?subject=Contact%20Dev">vladimir.guillochet@gmx.fr</a></p>
+            <a href="tel:+33616358420">06 16 35 84 20</a>
         </div>
     </div>
 
@@ -36,10 +36,11 @@
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
-                <p>Projets réalisés en Windev et Python <br><br><br></p>
+                <p>Projets réalisés en Windev et Python </p>
                 <p>Windev :</p>
                     <li>Suivi du cours "autoformation Windev 22 complet"</li>
                     <li>Seminaire "nouveautés de Windev 22"</li>
+                
                 <p>Python :</p>
                     <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
                     <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
