--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
-                <p>Projets réalisés en Windev et Python
-                    <p>Windev :</p>
+                <p>Projets réalisés en Windev et Python</p>
+                    Windev :
                         <li>Suivi du cours "autoformation Windev 22 complet"</li>
                         <li>Seminaire "nouveautés de Windev 22"</li>
-                 </p>
                 
                 <p>Python :</p>
                     <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
