--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
-                <p>Projets réalisés en Windev et Python</p>
+                <p>Projets réalisés en Windev et Python
                     Windev :
                         <li>Suivi du cours "autoformation Windev 22 complet"</li>
                         <li>Seminaire "nouveautés de Windev 22"</li>
                 
-                <p>Python :</p>
+                Python :
                     <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
                     <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
                     <li>Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
                 <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil (à venir profil linkein)</a>
+                </p>
             </div>
         </div>
     </div>
