--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="texte-avec-ligne-verticale">
                 <p>Projets réalisés en Windev et Python
                     Windev :
-                        <li>Suivi du cours "autoformation Windev 22 complet"</li>
+                        Suivi du cours "autoformation Windev 22 complet"
                         <li>Seminaire "nouveautés de Windev 22"</li>
                 
                 Python :
