--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- SECTION GRISE 1 -->
     <div class="section section_grise1">
         <div class="separateur_gris"></div>
-        <p>Je développe vos <span class="gras">Projets WEB</span> ou vos <span class="gras">Applications mobiles IOS/Android</span> de A à Z</p>
+        <p>Je développe vos <span class="gras">Projets WEB</span> ou vos <span class="gras">Applications mobiles IOS/Android</span></p>
     </div>
 
     <!-- SECTION BLANCHE -->
@@ -38,14 +38,15 @@
             <div class="texte-avec-ligne-verticale">
                 <p>Projets réalisés en Windev et Python
                     Windev :
-                        Suivi du cours "autoformation Windev 22 complet"
+                        <li>Suivi du cours "autoformation Windev 22 complet"</li>
                         <li>Seminaire "nouveautés de Windev 22"</li>
+                </p>
                 
-                Python :
+                 </p>Python :
                     <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
                     <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
                     <li>Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
-                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil (à venir profil linkein)</a>
+                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil linkedin</a>
                 </p>
             </div>
         </div>
@@ -87,11 +88,31 @@
         <table class="col_portfolio float-right" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src=""></td>
             </tr>
             <tr>
                 <td></td>
                 <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
+            </tr>
+        </table>
+        <table class="col_portfolio" style="display: inline-block;" border="0">
+            <tr>
+                <td><div class="barre-verticale"></div></td>
+                <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
+            </tr>
+        </table>
+        <table class="col_portfolio float-right" border="0">
+            <tr>
+                <td><div class="barre-verticale"></div></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src=""></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><a href="portfolio-site_deeplearning.html">Projet Windev</a></td>
             </tr>
         </table>
     </div>
