--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <table class="col_portfolio float-right" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src=""></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.jpg"></td>
             </tr>
             <tr>
                 <td></td>
@@ -98,7 +98,7 @@
         <table class="col_portfolio" style="display: inline-block;" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
+                <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src=""></td>
             </tr>
             <tr>
                 <td></td>
