--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <table class="col_portfolio float-right" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src=""></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="logo_optinav.png"></td>
             </tr>
             <tr>
                 <td></td>
