--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
-                <p>Projets réalisés en Windev et Python
+                <p style="margin-left: 12px;">Projets réalisés en Windev et Python
                     Windev :
                         <li>Suivi du cours "autoformation Windev 22 complet"</li>
                         <li>Seminaire "nouveautés de Windev 22"</li>
