--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- COVER -->
     <div class="cover">
-        <img class="cover_profile" src="profile_guillochet_1.jpg">
+        <img class="cover_profile" src="photo_profil.jpg">
         <h1>Vladimir Guillochet</h1>
         <p>Developpeur fullstack | 4 ans d'experience</p>
         <div style="text-align: center;">
