--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 </p>
                 
                  </p>Python :
-                    <li>Certification UDEMY "Developpeur python - Formation complete 2021"</li>
-                    <li>Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
-                    <li>Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
+                    <li style="margin-left: 15px;">Certification UDEMY "Developpeur python - Formation complete 2021"</li>
+                    <li style="margin-left: 15px;">Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
+                    <li style="margin-left: 15px;">Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
                 <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil linkedin</a>
                 </p>
             </div>
