--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
-                <p>Projets réalisés en Windev et Python
+                Projets réalisés en Windev et Python
                     Windev :
                         <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
                         <li style="margin-left: 15px;">Seminaire "nouveautés de Windev 22"</li>
-                </p>
+                
                 
                  </p>Python :
                     <li style="margin-left: 15px;">Certification UDEMY "Developpeur python - Formation complete 2021"</li>
