--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="section">
         <h2>En savoir plus</h2>
         <img class="col-contenu" src="profile_guillochet_1.jpg">
+        <table class="col_portfolio" style="display: inline-block;" border="0">
         <div class="col-contenu float-right">
             <div class="texte-avec-ligne-verticale">
                 <p>Projets réalisés en Windev et Python
@@ -50,6 +51,7 @@
                 </p>
             </div>
         </div>
+        </table>
     </div>
 
     <!-- SECTION GRISE 2 -->
