--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
             <tr>
                 <td><div class="barre-verticale"></div></td>
                 <td style="width: 100%;">
-                    <p>Projets réalisés en Windev et Python
-                    Windev :
+                    <p>Projets réalisés en Windev et Python</p>
+                    <p>Windev :
                         <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
                         <li style="margin-left: 15px;">Seminaire "nouveautés de Windev 22"</li>
-                </p>
+                     </p>
                 
                  </p>Python :
                     <li style="margin-left: 15px;">Certification UDEMY "Developpeur python - Formation complete 2021"</li>
                     <li style="margin-left: 15px;">Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
                     <li style="margin-left: 15px;">Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
                 <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil linkedin</a>
-        </p>
+                </p>
             </td>
             </tr>
         </table>
