--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
+                <td align="center"><a href="portfolio-application_mrbeat.html"><img style="width: 70%" src="logo_excel.png">Demonstateur Excel - TDB / KPI / VBA</a></td>
             </tr>
         </table>
         <table class="col_portfolio float-right" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="logo_optinav.png"></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 70%" src="logo_optinav.png"></td>
             </tr>
             <tr>
                 <td></td>
