--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <table class="col_portfolio float-right" border="0">
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.jpg"></td>
+                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
             </tr>
             <tr>
                 <td></td>
