--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="section">
         <h2>En savoir plus</h2>
         <img class="col-contenu" src="profile_guillochet_1.jpg">
-        <table class="col_portfolio" style="display: inline-block;" border="0">
+        <table class="col_portfolio" style="display: inline-block; vertical-align:center;" border="0";>
             <tr>
                 <td><div class="barre-verticale"></div></td>
                 <td style="width: 100%;">
