--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <table class="col_portfolio" style="display: inline-block; vertical-align:center;" border="0";>
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;">
+                <td style="width: 100%; display: table-cell; vertical-align: middle; height: 100%;">
                     <p>Projets réalisés en Windev et Python</p>
                     <p>Windev :
                         <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
