--- a/index.html
+++ b/index.html
@@ -37,20 +37,27 @@
         <table class="col_portfolio" style="display: inline-block; vertical-align:center;" border="0";>
             <tr>
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%; display: table-cell; vertical-align: middle; height: 100%;">
-                    <p>Projets réalisés en Windev et Python</p>
-                    <p>Windev :
-                        <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
-                        <li style="margin-left: 15px;">Seminaire "nouveautés de Windev 22"</li>
-                     </p>
                 
-                 </p>Python :
-                    <li style="margin-left: 15px;">Certification UDEMY "Developpeur python - Formation complete 2021"</li>
-                    <li style="margin-left: 15px;">Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021" -- en cours de validation</li>
-                    <li style="margin-left: 15px;">Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
-                    <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil linkedin</a>
-                </p>
-            </td>
+                <td style="width: 100%; display: table-cell; vertical-align: middle; height: 100%;">
+                    <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
+                        <p>Projets réalisés en Windev et Python</p>
+                        <p>Windev :
+                            <ul>
+                                <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
+                                <li style="margin-left: 15px;">Seminaire "nouveautés de Windev 22"</li>
+                            </ul>
+                         </p>
+                    
+                        </p>Python :
+                            <ul>
+                                <li style="margin-left: 15px;">Certification UDEMY "Developpeur python - Formation complete 2021"</li>
+                                <li style="margin-left: 15px;">Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021"</li>
+                                <li style="margin-left: 15px;">Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
+                                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/">En savoir plus sur mon profil linkedin</a>
+                            </ul>
+                        </p>
+                    </div>
+                </td>
             </tr>
         </table> 
     </div>
