--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <tr>
                 <td><div class="barre-verticale"></div></td>
                 
-                <td style="width: 100%; display: table-cell; vertical-align: middle; height: 100%;">
+                <td style="width: 100%; padding: 0;">
                     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
                         <p>Projets réalisés en Windev et Python</p>
                         <p>Windev :
