--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
             </tr>
         </table>
-        <table class="col_portfolio float-right" border="0">
+        <table class="col_portfolio float-right" border="0" vertical-align:center;">
             <tr>
                 <td><div class="barre-verticale"></div></td>
                 <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
