--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <tr>
                 <td><div class="barre-verticale"></div></td>
                 
-                <td style="width: 100%; padding: 0;">
+                <td style="width: 100%; padding: 0; vertical-align: middle;">
                         <p>Projets réalisés en Windev et Python</p>
                         <p>Windev :
                                 <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
