--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <h2>En savoir plus</h2>
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <table class="col_portfolio" style="display: inline-block; vertical-align:center;" border="0";>
-            <tr>
+            <tr style="vertical-align: middle;">
                 <td><div class="barre-verticale"></div></td>
                 
-                <td style="width: 100%; padding: 0; vertical-align: middle;">
+                <td style="width: 100%; padding: 0;">
                         <p>Projets réalisés en Windev et Python</p>
                         <p>Windev :
                                 <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
