--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     </div>
 
     <!-- SECTION BLANCHE -->
-    <div class="section">
+    <div class="section"  style="vertical-align: middle;">
         <h2>En savoir plus</h2>
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <table class="col_portfolio" style="display: inline-block; vertical-align:center;" border="0";>
-            <tr style="vertical-align: middle;">
+            <tr>
                 <td><div class="barre-verticale"></div></td>
                 
                 <td style="width: 100%; padding: 0;">
