--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <!-- SECTION BLANCHE -->
-    <div class="section"  style="vertical-align: middle;">
+    <div class="section">
         <h2>En savoir plus</h2>
         <img class="col-contenu" src="profile_guillochet_1.jpg">
         <table class="col_portfolio" style="display: inline-block; vertical-align:center;" border="0";>
