--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- SECTION GRISE 2 -->
-    <div class="section section_grise2">
+    <div class="section section_grise2" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
         <h2>Portfolio</h2>
         <table class="col_portfolio" style="display: inline-block;" border="0">
             <tr>
