--- a/index.html
+++ b/index.html
@@ -59,66 +59,69 @@
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
         <h2>Portfolio</h2>
-        <table class="col_portfolio" style="display: inline-block;" border="0">
-            <tr>
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio float-right" border="0" vertical-align:center;">
-            <tr>
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio" style="display: inline-block;" border="0">
-            <tr>
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio float-right" border="0">
-            <tr>
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio" style="display: inline-block;" border="0">
-            <tr>
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="excel-logo.png"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio float-right" border="0">
-            <tr>
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="logo_optinav.png"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="portfolio-site_deeplearning.html">Projet Windev</a></td>
-            </tr>
-        </table>
+        
+        <div class="col_portfolio" style="flex: 1; margin: 10px;">
+            <table class="col_portfolio" style="display: inline-block;" border="0">
+                <tr>
+                    <td><div class="barre-verticale"></div></td>
+                    <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
+                </tr>
+            </table>
+            <table class="col_portfolio float-right" border="0" vertical-align:center;">
+                <tr>
+                    <td><div class="barre-verticale"></div></td>
+                    <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
+                </tr>
+            </table>
+            <table class="col_portfolio" style="display: inline-block;" border="0">
+                <tr>
+                    <td><div class="barre-verticale"></div></td>
+                    <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
+                </tr>
+            </table>
+            <table class="col_portfolio float-right" border="0">
+                <tr>
+                    <td><div class="barre-verticale"></div></td>
+                    <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
+                </tr>
+            </table>
+            <table class="col_portfolio" style="display: inline-block;" border="0">
+                <tr>
+                    <td><div class="barre-verticale"></div></td>
+                    <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="excel-logo.png"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td align="center"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
+                </tr>
+            </table>
+            <table class="col_portfolio float-right" border="0">
+                <tr>
+                    <td><div class="barre-verticale"></div></td>
+                    <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="logo_optinav.png"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td align="center"><a href="portfolio-site_deeplearning.html">Projet Windev</a></td>
+                </tr>
+            </table>
+        </div>
     </div>
     
     <!-- SECTION BLANCHE -->
