--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </div>
 
     <!-- SECTION GRISE 2 -->
-    <div class="section section_grise2" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+    <div class="section section_grise2">
         <h2>Portfolio</h2>
         
-        <div class="col_portfolio" style="flex: 1; margin: 10px;">
-            <table class="col_portfolio" style="display: inline-block;" border="0">
+        <div class="col_portfolio">
+            <table class="col_portfolio" style="display: inline-block;" border="1">
                 <tr>
                     <td><div class="barre-verticale"></div></td>
                     <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
