--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2>Portfolio</h2>
         
         <div class="col_portfolio">
-            <table class="col_portfolio" style="display: inline-block;" border="1">
+            <table class="col_portfolio" style="display: inline-block; height="150px";" border="1">
                 <tr>
                     <td><div class="barre-verticale"></div></td>
                     <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
