--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="section section_grise2">
         <h2>Portfolio</h2>
         
-        <div class="col_portfolio">
-            <table class="col_portfolio" style="display: inline-block; height:150px;" border="1">
+        <div class="col_portfolio" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+            <table class="col_portfolio" style="flex:1; height:150px;" border="0">
                 <tr>
                     <td><div class="barre-verticale"></div></td>
                     <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
@@ -71,7 +71,7 @@
                     <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
                 </tr>
             </table>
-            <table class="col_portfolio float-right" border="1" style="vertical-align:center; height:150px;">
+            <table class="col_portfolio float-right" style="flex:1; height:150px;" border="0">
                 <tr>
                     <td><div class="barre-verticale"></div></td>
                     <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
