--- a/index.html
+++ b/index.html
@@ -60,47 +60,54 @@
     <div class="section section_grise2">
         <h2>Portfolio</h2>
         
-        <div class="col_portfolio" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-            <table class="col_portfolio" style="flex:1; height:150px;" border="0">
-                <tr>
-                    <td><div class="barre-verticale"></div></td>
-                    <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
-                </tr>
-            </table>
-            <table class="col_portfolio float-right" style="flex:1; height:150px;" border="0">
-                <tr>
-                    <td><div class="barre-verticale"></div></td>
-                    <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
-                </tr>
-            </table>
-            <table class="col_portfolio" style="display: inline-block;" border="1">
-                <tr>
-                    <td><div class="barre-verticale"></div></td>
-                    <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
-                </tr>
-            </table>
-            <table class="col_portfolio float-right" border="1">
-                <tr>
-                    <td><div class="barre-verticale"></div></td>
-                    <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
-                </tr>
-            </table>
+        <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+            <div class="col_portfolio" style="flex: 1; margin: 10px; height: 300px;">
+                <table class="col_portfolio" style=" border="1">
+                    <tr>
+                        <td><div class="barre-verticale"></div></td>
+                        <td style="width: 100%;"><a href="portfolio-site-restaurant.html"><img style="width: 100%;" src="project1small.jpg"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
+                    </tr>
+                </table>
+                <table class="col_portfolio float-right" style="flex:1; height:150px;" border="0">
+                    <tr>
+                        <td><div class="barre-verticale"></div></td>
+                        <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="col_portfolio" style="flex: 2; margin: 10px; height: 300px;">
+                <table class="col_portfolio" style="display: inline-block;" border="1">
+                    <tr>
+                        <td><div class="barre-verticale"></div></td>
+                        <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
+                    </tr>
+                </table>
+                <table class="col_portfolio float-right" border="1">
+                    <tr>
+                        <td><div class="barre-verticale"></div></td>
+                        <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
+                    </tr>
+                </table>
+            </div>
+
+            
             <table class="col_portfolio" style="display: inline-block;" border="1">
                 <tr>
                     <td><div class="barre-verticale"></div></td>
