--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
                     </tr>
                 </table>
-                <table class="col_portfolio float-right" style="flex:1; height:150px;" border="0">
+                <table class="col_portfolio float-right" style="flex:1; height:150px;" border="1">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
                         <td style="width: 100%;"><a href="portfolio-application_galaxy.html"><img style="width: 100%" src="project_galaxy_bg1small.jpg"></td>
@@ -84,7 +84,7 @@
                 </table>
             </div>
 
-            <div class="col_portfolio" style="flex: 2; margin: 10px; height: 300px;">
+            <div class="col_portfolio" style="flex: 1; margin: 10px; height: 150px;">
                 <table class="col_portfolio" style="display: inline-block;" border="1">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
@@ -95,7 +95,7 @@
                         <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
                     </tr>
                 </table>
-                <table class="col_portfolio float-right" border="1">
+                <table class="col_portfolio float-right" border="1" style="flex: 1; margin: 10px; height: 150px;">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
                         <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="ANN.png"></td>
