--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <h2>Portfolio</h2>
         
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-            <div class="col_portfolio" style="flex: 1; margin: 10px; height: 300px;">
+            
+            <div class="col_portfolio" style="flex: 1 1 45%; margin: 10px; height: 300px;">
                 <table class="col_portfolio" style="height:300px;" border="1">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
