--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
-        <h2>Portfolio</h2>
+        <h2>Portfolio v2</h2>
         
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
             
