--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
-        <h2>Portfolio v3</h2>
+        <h2>Portfolio v4</h2>
         
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
             
@@ -89,7 +89,7 @@
             </div>
 
             <div class="col_portfolio" style="flex: 1; margin: 10px; height: 300px;">
-                <table class="col_portfolio" style="height:300px;" border="1">
+                <table class="col_portfolio" border="1" style="height: 100%; width: 100%;">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
                         <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="project_mrbeat_logo.png"></td>
