--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
-        <h2>Portfolio v1</h2>
+        <h2>Portfolio v2</h2>
         
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
             
@@ -96,7 +96,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-application_mrbeat.html">Projet Mr Beat</a></td>
                     </tr>
                 </table>
             </div>
