--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
-        <h2>Portfolio v2</h2>
+        <h2>Portfolio v3</h2>
         
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
             
@@ -70,7 +70,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-site-restaurant.html">Projet resto</a></td>
                     </tr>
                 </table>
             </div>
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-application_galaxy.html">Projet Galaxy</a></td>
                     </tr>
                 </table>
             </div>
@@ -109,7 +109,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-site_deeplearning.html">Projet IRIS Deeplearning</a></td>
                     </tr>
                 </table>
             </div>
@@ -123,7 +123,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
                     </tr>
                 </table>
             </div>
@@ -136,7 +136,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="portfolio-site_deeplearning.html">Projet Windev</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-site_deeplearning.html">Projet Windev</a></td>
                     </tr>
                 </table>
             </div>
