--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <td><div class="barre-verticale"></div></td>
                 
                 <td style="width: 100%; padding: 0;">
-                        <p>Projets réalisés en Windev et Python</p>
+                        <p>Projets réalisés en Windev, Python et Excel</p>
                         <p>Windev :
                                 <li style="margin-left: 15px;">Suivi du cours "autoformation Windev 22 complet"</li>
                                 <li style="margin-left: 15px;">Seminaire "nouveautés de Windev 22"</li>
@@ -50,6 +50,15 @@
                                 <li style="margin-left: 15px;">Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021"</li>
                                 <li style="margin-left: 15px;">Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
                                 <a style="padding-left: 8px;" href="https://www.linkedin.com/in/vladimir-g-020533221">En savoir plus sur mon profil linkedin</a>
+                        </p>
+
+                        </p>Excel :
+                                <li style="margin-left: 15px;">Certification UDEMY "Maitrisez Excel de A à Z (+VBA) 2023"</li>
+                                <li style="margin-left: 15px;">Certification UDEMY "Data Analyse avec Excel (TDB + KPI) 2023"</li>
+                        </p>
+
+                        <p>
+                            <a style="padding-left: 8px;" href="https://www.linkedin.com/in/vladimir-g-020533221">En savoir plus sur mon profil linkedin</a>
                         </p>
                 </td>
             </tr>
